# cf_config

./: .gitignore  .gitmodules  Pipfile  README  README.md  package.sh  pyproject.toml  python.paths  python.sh  setup.cfg
CloudFormation/: cloud_formation_role.py  cloud_user.py  deploy.py
releases/: Pipfile-0.7.2  Pipfile-0.8.1  Pipfile.lock-0.7.0  Pipfile.lock-0.7.2  Pipfile.lock-0.8.0  Pipfile.lock-0.8.1
scripts/: makeconfig.py
src/cf_config/: build_system.py  cloud_config.py  cloud_formation.py  config.py  dev.json
src/cfconfig/: cloud_config.py  cloud_formation.py  makeconfig.py  makedeploy.py
src/scripts/: makeconfig.py  makedeploy.py
tests/: cloud-config.json  interactive.py  stacks.json  test-config.sh  test-deploy.sh  test.sh  test_config.py  test_config_table.py
