[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "cfconfig"
version = "0.7.1"

license = { file = "LICENSE" }

readme = "README.md"

description = "CloudFormation configuration and deployment."
authors = [ { name = "Michael Mattie" , email = "codermattie@runbox.com" } ]

[project.urls]
homepage = "https://github.com/coderofmattie/cf_config"
repository = "https://github.com/coderofmattie/cf_config.git"

[project.scripts]
awsconfig = "scripts.makeconfig:exec"


