[metadata]
name = cf-config
version = 0.0.1
author = Michael Mattie
author_email = michael.mattie.employers@gmail.com
description = Configuration for applications from cloudformation execution

[options]
package_dir=
    =src
packages = cf_config
include_package_data = True

[options.packages.find]
where = src
