[metadata]
name = cf-config
version = 0.3.0
author = Michael Mattie
author_email = codermattie@runbox.com
description = Configuration for applications from cloudformation execution

[options]
package_dir=
    =src
packages = cf_config
include_package_data = True

[options.packages.find]
where = src
